[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scene/Resource/3D_View.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Others/Tile.png" type="Texture" id=2]
[ext_resource path="res://Assets/Models/OBJ/Eixo.obj" type="ArrayMesh" id=3]
[ext_resource path="res://Script/Class/AnimationButtonClass.gd" type="Script" id=4]
[ext_resource path="res://Assets/2D/SVG/UI.svg" type="Texture" id=5]
[ext_resource path="res://Script/ImageTile/ImageTile_Creator.gd" type="Script" id=6]
[ext_resource path="res://Script/UI/Moviment_panel.gd" type="Script" id=7]
[ext_resource path="res://Script/Class/SpinBoxControlClass.gd" type="Script" id=8]
[ext_resource path="res://Script/ImageTile/World.gd" type="Script" id=9]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
flags_unshaded = true
params_cull_mode = 2
albedo_color = Color( 1, 1, 1, 0.419608 )
albedo_texture = ExtResource( 2 )
uv1_offset = Vector3( 0.5, 0, 0.5 )
uv1_triplanar = true
proximity_fade_enable = true
proximity_fade_distance = 1.0
distance_fade_mode = 2
distance_fade_min_distance = 0.0
distance_fade_max_distance = 3.85

[sub_resource type="PlaneMesh" id=2]
size = Vector2( 300, 300 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 150, 0.001, 150 )

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
flags_fixed_size = true
params_cull_mode = 2
albedo_color = Color( 1, 0, 0.211765, 1 )

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true
flags_fixed_size = true
params_cull_mode = 2
albedo_color = Color( 0, 0.576471, 1, 1 )

[sub_resource type="AtlasTexture" id=6]
flags = 23
atlas = ExtResource( 5 )
region = Rect2( 12, 303, 101, 101 )

[sub_resource type="PlaneMesh" id=7]
center_offset = Vector3( -1, 0, 0 )

[sub_resource type="SpatialMaterial" id=8]

[sub_resource type="OpenSimplexNoise" id=11]

[sub_resource type="NoiseTexture" id=12]
seamless = true
noise = SubResource( 11 )

[sub_resource type="SpatialMaterial" id=10]
params_cull_mode = 2
albedo_texture = SubResource( 12 )

[sub_resource type="ArrayMesh" id=9]

[node name="ImageTile_Creator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
distance = 0.006

[node name="Background" type="PanelContainer" parent="."]
modulate = Color( 1, 1, 1, 0.709804 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="View" type="PanelContainer" parent="."]
anchor_left = 0.0171875
anchor_top = 0.0347222
anchor_right = 0.982813
anchor_bottom = 0.965278
__meta__ = {
"_edit_use_anchors_": true
}

[node name="View_Container" type="ViewportContainer" parent="View"]
margin_left = 3.0
margin_top = 5.0
margin_right = 1233.0
margin_bottom = 663.0
stretch = true

[node name="Viewport" type="Viewport" parent="View/View_Container"]
size = Vector2( 1230, 658 )
handle_input_locally = false
hdr = false
debug_draw = 1
render_target_update_mode = 3
shadow_atlas_quad_0 = 0
shadow_atlas_quad_1 = 0
shadow_atlas_quad_2 = 0
shadow_atlas_quad_3 = 0

[node name="3D_View" parent="View/View_Container/Viewport" instance=ExtResource( 1 )]

[node name="Camera" parent="View/View_Container/Viewport/3D_View" index="1"]
cull_mask = 4

[node name="Pos" parent="View/View_Container/Viewport/3D_View" index="2"]
Index_values = false

[node name="Grid" type="MeshInstance" parent="View/View_Container/Viewport"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
layers = 4
material_override = SubResource( 1 )
cast_shadow = 0
mesh = SubResource( 2 )
skeleton = NodePath("../..")

[node name="Area" type="Area" parent="View/View_Container/Viewport/Grid"]
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="View/View_Container/Viewport/Grid/Area"]
shape = SubResource( 3 )

[node name="Axis" type="MeshInstance" parent="View/View_Container/Viewport"]
transform = Transform( 1.49952, 0, 0, 0, 1.49952, 0, 0, 0, 1.49952, 0, 0, 0 )
layers = 4
cast_shadow = 0
mesh = ExtResource( 3 )
material/0 = SubResource( 4 )
material/1 = SubResource( 5 )

[node name="Panel" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -408.0
margin_bottom = -7.0
mouse_filter = 0

[node name="Up" type="Control" parent="Panel"]
margin_right = 408.0
margin_bottom = 450.0
rect_min_size = Vector2( 0, 450 )

[node name="Preview2D" type="TextureRect" parent="Panel/Up"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -168.0
margin_top = -138.0
margin_right = -30.0
mouse_filter = 2
texture = SubResource( 6 )
expand = true

[node name="Image" type="PanelContainer" parent="Panel"]
margin_top = 454.0
margin_right = 408.0
margin_bottom = 713.0
size_flags_vertical = 3

[node name="Vbox" type="VBoxContainer" parent="Panel/Image"]
margin_left = 3.0
margin_top = 5.0
margin_right = 405.0
margin_bottom = 252.0

[node name="Hs" type="HSeparator" parent="Panel/Image/Vbox"]
margin_right = 402.0
margin_bottom = 4.0
mouse_default_cursor_shape = 9
script = ExtResource( 7 )
Panel_Path = NodePath("../../../Up")
Y = true
Negative = true
y_limit = 474

[node name="Tex" type="TextureButton" parent="Panel/Image/Vbox"]
unique_name_in_owner = true
margin_top = 8.0
margin_right = 402.0
margin_bottom = 219.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 4

[node name="Seletor" type="TextureRect" parent="Panel/Image/Vbox/Tex"]
unique_name_in_owner = true
margin_right = 57.431
margin_bottom = 57.334
mouse_filter = 2
texture = SubResource( 6 )
expand = true

[node name="Hbox" type="HBoxContainer" parent="Panel/Image/Vbox"]
margin_top = 223.0
margin_right = 402.0
margin_bottom = 247.0

[node name="OpenImage" type="Button" parent="Panel/Image/Vbox/Hbox"]
margin_right = 104.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
text = "Open image"
script = ExtResource( 4 )

[node name="filter" type="CheckBox" parent="Panel/Image/Vbox/Hbox"]
margin_left = 108.0
margin_right = 190.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
pressed = true
text = "filter"
script = ExtResource( 4 )

[node name="resolution" type="HBoxContainer" parent="Panel/Image/Vbox/Hbox"]
margin_left = 194.0
margin_right = 278.0
margin_bottom = 24.0

[node name="tittle" type="Label" parent="Panel/Image/Vbox/Hbox/resolution"]
margin_top = 2.0
margin_right = 20.0
margin_bottom = 22.0
text = "px"

[node name="x" type="SpinBox" parent="Panel/Image/Vbox/Hbox/resolution"]
unique_name_in_owner = true
margin_left = 24.0
margin_right = 84.0
margin_bottom = 24.0
max_value = 2000.0
script = ExtResource( 8 )

[node name="World" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.198, 0 )
script = ExtResource( 9 )

[node name="Select_3d" type="MeshInstance" parent="World"]
layers = 4
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="Model" type="MeshInstance" parent="World"]
layers = 4
material_override = SubResource( 10 )
mesh = SubResource( 9 )

[connection signal="mouse_entered" from="View/View_Container" to="." method="_on_View_Container_mouse_entered"]
[connection signal="mouse_exited" from="View/View_Container" to="." method="_on_View_Container_mouse_exited"]
[connection signal="button_up" from="Panel/Image/Vbox/Tex" to="." method="_on_Tex_button_up"]
[connection signal="pressed" from="Panel/Image/Vbox/Hbox/OpenImage" to="." method="_on_OpenImage_pressed"]
[connection signal="toggled" from="Panel/Image/Vbox/Hbox/filter" to="." method="_on_filter_toggled"]
[connection signal="value_changed" from="Panel/Image/Vbox/Hbox/resolution/x" to="." method="_on_x_value_changed"]

[editable path="View/View_Container/Viewport/3D_View"]
